src/components/Contact/styles.scss
#contact { 
    .sub-title {
        position: absolute;
        top: 5%;
        left: 50%;
        transform: translateX(-50%);
        width: 40%;
        max-width: 400px;
        font-size: 20px;
        font-family: 'Edu VIC WA NT Beginner', cursive;
        border-bottom: 2px solid white;
        text-align: center;
    }

    .left {
        width: 49.5%;
        height: 70vh;
        flex-direction: column;
        margin: 100px 0 0 0;
        
        form {
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            
            label {
                margin: 20px;
                display: grid;
                font-size: 15px;
                
                input {
                    margin: -25px 0 0 -10px;
                    padding-inline: 10px;
                    font-family: 'Ubuntu', sans-serif;
                    font-size: 15px;
                    width: 400px;
                    height: 30px;
                    border-bottom: 1px solid white;
                    background: transparent;
                    transition: all 0.3s ease;
                    
                    &:focus, &.active{
                        margin: 5px 0 0 0;
                        background: white;
                        border-radius: 5px;                        
                    }
                }
            }

            .to {
                cursor: pointer;
                span {
                    font-style: italic;
                    text-decoration: underline;
                }
            }
            
            textarea {
                width: 400px;
                height: 100px;
                resize: none;
                margin: 20px 0 0 0;
                padding: 10px;
                font-family: 'Ubuntu',sans-serif;
                font-size: 15px;
                font-weight: 600;
                background: white;
                color: black;
                border-radius: 3px;
            }
            
            .send {
                font-family: 'Edu VIC WA NT Beginner', cursive;
                font-size: 18px;
                width: 160px;
                height: 50px;
                margin: 40px 0 0 0;
                background: black;
                border-radius: 6px;
                color: white;
                cursor: pointer;
                transition: all 0.3s ease;
                
                &:hover {
                    background: white;
                    color: black;
                }
            }
        }
    }
    
    .border {
        margin-top: 80px;
        width: 2px;
        height: 60vh;
        background: white;
    }
    
    .right {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: space-around;
        width: 45%;
        padding: 20px;

        a {
            width: 40%;
            height: 120px;
            border-radius: 6px;
            margin: 10px;
            padding: 10px;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            text-align: center;
            transition: transform 0.3s ease;

            .icon {
                font-size: 50px;

                i {
                    color: white;
                }
            }

            .link-text {
                font-family: cursive;
                color: white;
                font-size: 14px;
            }

            &.github {
                background: white;
                
                .link-text {
                    color: black;
                }

                .icon {
                    i {color: black;}
                }
            }

            &.discord {
                background: black;
            }

            &.whatsapp {
                background: rgb(9, 172, 63);
            }

        }
    }
}

/* Mobile */
@media (max-width: 768px) {
    #contact {
        height: 100vh;
        flex-wrap: wrap;
        .left {
            width: 100%;
            height: 50vh;
            margin-top: 40px;

            form label input, form textarea {
                width: 90vw;
            }
        }


        .border {
            display: none;
        }

        .right {
            width: 90vw;
            flex-direction: row;
            flex-wrap: nowrap;
            justify-content: center;
            margin-bottom: 40px;
            padding-block: 0;
            padding-inline: 20%;
            border-top: 2px solid white;

            a {
                width: 60px;
                height: 60px;
                display: grid;
                place-items: center;
                
                .icon {
                    font-size: 40px;
                }

                .link-text {
                    display: none;
                }
            }
        }
    }
}

